# er-save-manager

./: CHANGELOG.md  TODO.md  pyproject.toml
resources/: app.manifest  version.txt
src/er_save_manager/: __init__.py
src/er_save_manager/editors/: world_state.py
src/er_save_manager/fixes/: dlc.py  event_flags.py  steamid.py  time_sync.py  torrent.py  weather.py
src/er_save_manager/parser/: save.py  user_data_x.py
src/er_save_manager/ui/editors/: character_info_editor.py  stats_editor.py
src/er_save_manager/ui/tabs/: event_flags_tab.py  gestures_regions_tab.py
