[project]
name = "er-save-manager"
version = "0.11.1"
description = "Elden Ring Save File Editor, Backup Manager, and Corruption Fixer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Hapfel" }
]
keywords = ["elden-ring", "save-editor", "save-manager", "game-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pillow>=12.1.0",
    "customtkinter>=5.2.2",
    "customtkinterthemes>=1.0.0",
    "requests>=2.32.0",
    "supabase>=2.4.0",
    "certifi>=2023.7.22",
    "packaging>=23.0",
]

[project.scripts]
er-save-manager = "er_save_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/er_save_manager"]

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "cx_Freeze>=7.0",
    "tomlkit>=0.12.0",
    "ruff>=0.8",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["er_save_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
minversion = "8.0"
